add pipeline requirements to /version response
